deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        supplementalGroups:
          - 476600010
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/jellyfin/jellyfin
        imagePullPolicy: IfNotPresent
        name: jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /data/media/music
          name: music
          readOnly: True
        - mountPath: /data/media/shows
          name: shows
          readOnly: False
        - mountPath: /data/media/movies
          name: movies
          readOnly: False
        - mountPath: /config
          name: jellyfin-config
      restartPolicy: Always
      volumes:
      - name: music
        persistentVolumeClaim:
          claimName: jellyfin-music
      - name: shows
        persistentVolumeClaim:
          claimName: jellyfin-shows
      - name: movies
        persistentVolumeClaim:
          claimName: jellyfin-movies
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config
